# tts-rs

./: .gitIgnore  .gitignore  AGENTS.md  Cargo.toml  Claude.md  README.md  reference.json
tts_app/: Cargo.toml
tts_app/src/: backend.rs  lib.rs
tts_app/tests/: service.rs
tts_cli/: Cargo.toml  README.md
tts_cli/src/: cli.rs  lib.rs  main.rs
tts_cli/tests/: cli_parse.rs
tts_qwen/: Cargo.toml
tts_qwen/benches/: engine_bench.rs  prompt_bench.rs  sampling_bench.rs  tokenizer_bench.rs  wav_bench.rs
tts_qwen/benches/common/: mod.rs
tts_qwen/src/: backend.rs  core.rs  error.rs  executor.rs  frontend.rs  lib.rs  pipeline.rs  provider.rs  registry.rs  releases.rs
tts_qwen/src/adapter/: mod.rs  qwen_tts.rs
tts_qwen/src/arch/: audio_codec_build_encoder.rs  bridge.rs  mod.rs  model.rs
tts_qwen/src/arch/engine/: compiler.rs  mod.rs  protocol.rs
tts_qwen/src/arch/kernels/: attention.rs  layer.rs  rope.rs
tts_qwen/src/arch/load/: audio_codec_remap.rs  talker.rs  talker_remap.rs
tts_qwen/src/audio_codec/: inference.rs  mod.rs  tests.rs
tts_qwen/src/audio_codec/factory/: decoder.rs  encoder.rs
tts_qwen/src/audio_codec/model/: decoder.rs  wave_decoder.rs
tts_qwen/src/engine/: config.rs  engine.rs  mod.rs
tts_qwen/src/frontend/: mod.rs  prefill.rs  prompt.rs  types.rs
tts_qwen/src/io/: mod.rs  wav.rs
tts_qwen/src/kernels/: attention.rs  layer.rs  mlp.rs  norm.rs  rope.rs
tts_qwen/src/model/: audio_codec_build_decoder.rs  audio_codec_build_encoder.rs  build.rs  mod.rs  qwen_tts.rs  variant.rs
tts_qwen/src/model/audio_codec/: decoder.rs  encoder.rs
tts_qwen/src/model/load/: audio_codec.rs  mod.rs  talker.rs  talker_remap.rs
tts_qwen/src/pipeline/: mod.rs  output.rs  state.rs  types.rs
tts_qwen/src/profile/: compile.rs  mod.rs  model_config.rs
tts_qwen/src/profile/base/: prompt.rs  request.rs
tts_qwen/src/profile/custom_voice/: config.rs  mod.rs  prompt.rs
tts_qwen/src/profiling/: config.rs  mod.rs
tts_qwen/src/runners/: codec.rs  frontend.rs  mod.rs
tts_qwen/src/runners/talker/: decode.rs  mod.rs  predictor.rs  prefill.rs
tts_qwen/src/runtime/: executor.rs  kv.rs  mod.rs  types.rs
tts_qwen/src/scheduler/: mod.rs  single.rs
tts_qwen/src/session/: mod.rs  output.rs  state.rs
tts_qwen/src/shared/: error.rs  manifest.rs  mod.rs  paths.rs
tts_qwen/src/shared/config/: mod.rs  talker.rs
tts_qwen/src/shared/io/: audio_codec_load.rs  audio_codec_remap.rs  load_report.rs  mod.rs  output.rs  talker_load.rs
tts_qwen/src/shared/nn/: activation.rs  attention.rs  layer.rs  mlp.rs  mod.rs
tts_qwen/src/shared/runtime/: cache.rs  mod.rs  sampling.rs
tts_qwen/src/shared/verify/: audio_codec.rs
tts_qwen/src/talker/: factory.rs  inference.rs  mod.rs  model.rs  tests.rs
tts_qwen/src/talker/nn/: mod.rs  rope.rs
tts_qwen/tests/: alignment_prefill.rs  alignment_tokenizer.rs  backend_api.rs  core.rs  frontend.rs  model_dir.rs  pipeline.rs  prefill.rs  tokenizer.rs
tts_qwen/tests/common/: mod.rs
tts_qwen3_tts/: Cargo.toml
tts_qwen3_tts/benches/: qwen3_custom_voice_bf16.rs
tts_qwen3_tts/benches/common/: mod.rs
tts_qwen3_tts/src/: backend.rs  error.rs  lib.rs  releases.rs  sampling.rs
tts_qwen3_tts/src/capabilities/: mod.rs
tts_qwen3_tts/src/compiler/: mod.rs  session_seed.rs
tts_qwen3_tts/src/execution/: audio_finalize.rs  backend_runtime.rs  conditioning.rs  error.rs  loaded_model.rs  mod.rs  profiling.rs  reference_audio.rs  run.rs  session.rs
tts_qwen3_tts/src/execution/compiler/: mod.rs  prompt.rs  session_seed.rs  tests.rs
tts_qwen3_tts/src/execution/profiling/: mod.rs
tts_qwen3_tts/src/io/: tokenizer.rs
tts_qwen3_tts/src/legacy_arch/engine/: spec.rs
tts_qwen3_tts/src/legacy_arch/kernels/: attention.rs  layer.rs  mod.rs
tts_qwen3_tts/src/loading/: dtype.rs  load_adapter.rs  mod.rs  runtime.rs
tts_qwen3_tts/src/loading/package/: manifest.rs  normalize.rs
tts_qwen3_tts/src/model/: mod.rs  runtime.rs  speaker.rs  voice_clone.rs
tts_qwen3_tts/src/model/codec/: activation.rs  config.rs  conv.rs  core.rs  decode.rs  encode.rs  loading.rs  mod.rs  model.rs  runtime.rs  weights.rs
tts_qwen3_tts/src/model/graph/: mod.rs
tts_qwen3_tts/src/model/nn/: attention.rs  codebook.rs  mask.rs  mod.rs  sequence.rs  tensor.rs
tts_qwen3_tts/src/model/speaker/: config.rs  feature.rs  infer.rs  mod.rs  network.rs  weights.rs
tts_qwen3_tts/src/model/talker/: attention.rs  config.rs  infer.rs  kv.rs  layer.rs  mlp.rs  mod.rs  network.rs  rope.rs  sampling.rs  weights.rs
tts_qwen3_tts/src/package/: manifest.rs  mod.rs  normalize.rs
tts_qwen3_tts/src/profile/: mod.rs
tts_qwen3_tts/src/profile/base/: config.rs  mod.rs
tts_qwen3_tts/src/profile/custom_voice/: mod.rs  request.rs
tts_qwen3_tts/src/profiling/: mod.rs
tts_qwen3_tts/src/request/: base.rs  custom_voice.rs  mod.rs
tts_qwen3_tts/src/runtime/: executor.rs  mod.rs  reference_audio.rs  sampling.rs  types.rs
tts_qwen3_tts/src/surface/: backend.rs  mod.rs
tts_qwen3_tts/src/surface/request/: language.rs  (+2 more)
tts_qwen3_tts/tests/: compiler_load.rs  engine_backbone.rs  public_surface.rs  real_model.rs
tts_rs_qwen_burn/: Cargo.toml
tts_rs_qwen_burn/src/: error.rs  lib.rs  manifest.rs  paths.rs  speech_tokenizer.rs  talker.rs
tts_rs_qwen_burn/src/audio_codec/: mod.rs  tests.rs
tts_rs_qwen_burn/src/frontend/: mod.rs  prefill.rs  prompt.rs  text_tokenizer.rs  types.rs
tts_rs_qwen_burn/src/shared/: error.rs  manifest.rs  mod.rs  paths.rs
tts_rs_qwen_burn/src/speech_tokenizer/: inference.rs  load.rs  mod.rs  remap.rs  tests.rs  verify.rs
tts_rs_qwen_burn/src/talker/: cache.rs  config.rs  factory.rs  inference.rs  init.rs  load.rs  mod.rs  model.rs  remap.rs  tests.rs  types.rs  verify.rs
tts_rs_qwen_burn/tests/: alignment_code_predictor.rs  alignment_e2e.rs  alignment_prefill.rs  alignment_talker_decode.rs  alignment_talker_prefill.rs  alignment_tokenizer.rs  audio_codec_roundtrip.rs  decoder_alignment.rs  frontend.rs  speech_tokenizer_roundtrip.rs  talker_alignment.rs  talker_alignment_v5_v6.rs  talker_roundtrip.rs
tts_rs_qwen_burn/tests/common/: mod.rs
(+275 files in other folders)
