[workspace]
members = [
    "tts_cli",
    "tts_qwen",
]

resolver = "2"

[workspace.dependencies]
burn = "0.21.0"
burn-store = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
clap = { version = "4.5.51", features = ["derive"] }
tokenizers = "0.23.1"