[workspace]
members = [
    "tts_cli",
    "tts_qwen",
]

resolver = "2"

[workspace.dependencies]
burn = { version = "0.21.0", default-features = false }
burn-store = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
clap = { version = "4.5.51", features = ["derive"] }
tokenizers = "0.23.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
