[workspace]
members = [
    "tts_cli",
    "tts_infer",
    "tts_qwen3_tts",
    "tts_error",
    "tts_app",
]

resolver = "2"

[workspace.dependencies]
burn = { version = "0.21.0", default-features = false }
burn-store = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
tokenizers = "0.23.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_yaml = "0.9.34"
hound = "3.5.1"

# Workspace-local crates are also centralized here so member manifests
# can stay declarative and avoid drifting path/default-feature settings.
tts_infer = { path = "tts_infer" }
tts_error = { path = "tts_error" }
tts_qwen3_tts = { path = "tts_qwen3_tts", default-features = false }
tts_app = { path = "tts_app", default-features = false }
