[package]
name = "tts_app"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
thiserror = { workspace = true }
tts_infer = { workspace = true }
tts_error = { workspace = true }
tts_qwen3_tts = { workspace = true }

[dev-dependencies]
# Keep backend selection out of the orchestration layer; tests use the default
# local backend explicitly so `cargo test -p tts_app` still works.
tts_qwen3_tts = { workspace = true, features = ["flex", "fusion"] }
