[package]
name = "tts_cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["flex", "fusion"]
fusion = ["tts_qwen3_tts/fusion"]
flex = ["tts_qwen3_tts/flex"]
wgpu = ["tts_qwen3_tts/wgpu"]
cuda = ["tts_qwen3_tts/cuda"]
rocm = ["tts_qwen3_tts/rocm"]
metal = ["tts_qwen3_tts/metal"]
vulkan = ["tts_qwen3_tts/vulkan"]
webgpu = ["tts_qwen3_tts/webgpu"]

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tts_qwen3_tts = { path = "../tts_qwen3_tts", default-features = false }

[[bin]]
name = "tts_cli"
path = "src/main.rs"
