[package]
name = "tts_qwen"
version = "0.1.0"
edition = "2024"

[features]
default = ["flex", "fusion"]
fusion = ["burn/fusion"]
flex = ["burn/flex"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
rocm = ["burn/rocm"]
metal = ["burn/metal"]
vulkan = ["burn/vulkan"]
webgpu = ["burn/webgpu"]
operator-profiling = []

[dependencies]
burn = { workspace = true, default-features = false, features = ["std"] }
burn-store = { workspace = true, features = ["std", "pytorch", "safetensors"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
