[package]
name = "tts_qwen"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[features]
default = ["flex", "fusion"]
fusion = ["burn/fusion"]
flex = ["burn/flex"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
rocm = ["burn/rocm"]
metal = ["burn/metal"]
vulkan = ["burn/vulkan"]
webgpu = ["burn/webgpu"]
operator-profiling = []

[dependencies]
burn = { workspace = true, default-features = false, features = ["std"] }
burn-store = { workspace = true, features = ["std", "pytorch", "safetensors"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "prompt_bench"
harness = false

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "sampling_bench"
harness = false

[[bench]]
name = "wav_bench"
harness = false

[[bench]]
name = "engine_bench"
harness = false
