[package]
name = "tts_rs_qwen_burn"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.21.0", default-features = false, features = ["std", "flex"] }
burn-store = { version = "0.21.0", default-features = false, features = ["std", "pytorch", "safetensors"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
thiserror = { workspace = true }
