[package]
name = "tts_rs_qwen_burn"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, features = ["std", "ndarray", "flex"] }
burn-ndarray = { workspace = true }
burn-store = { workspace = true, features = ["std", "pytorch", "safetensors"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tong shi